@@ -1,5 +1,8 @@
 ChangeLog for the Qt GUI to Astrophotography
 
+20200822:
+	* add quality to ccdwidgetcontroller
+
 20200821:
 	* switch to StarTile in StarChartWidget
 
